# tallerTest2

./: .env.example  .gitignore  .mypy.ini  .ruff.toml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_raw_feed_items.py
docker/: .dockerignore  Dockerfile.api  Dockerfile.frontend
docs/: schema.md
frontend/: jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: env.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.test.ts  api.ts  http.test.ts  http.ts  types.ts  utils.ts  websocket.ts
frontend/src/types/: tailwindcss.d.ts
migrations/: 001_initial_schema.sql  002_core_entities.sql  003_raw_feed_items.sql  run.py
src/: __init__.py
src/application/: __init__.py
src/application/dtos/: __init__.py  agent_dtos.py  call_dtos.py  feed_dtos.py  ingestion_dtos.py  message_dtos.py  session_dtos.py  user_dtos.py
src/application/mappers/: __init__.py  agent_mapper.py  call_mapper.py  feed_mapper.py  message_mapper.py  session_mapper.py
src/application/ports/: __init__.py  feed_fetcher.py  feed_item_queue.py  realtime_publisher.py  telephony_service.py  token_validator.py  user_directory.py  voice_service.py
src/application/use_cases/: __init__.py  assign_role.py  create_agent.py  create_feed.py  delete_feed.py  end_session.py  get_agent.py  get_feed.py  ingest_feed.py  initiate_call.py  list_agents.py  list_feeds.py  list_users.py  send_message.py  set_feed_enabled.py  set_user_active.py  start_session.py  stream_audio.py  update_feed.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  agent.py  call.py  feed.py  message.py  raw_feed_item.py  session.py
src/domain/repositories/: __init__.py  call_repository.py  (+5 more)
src/infrastructure/: __init__.py  config.py  logging.py
src/interfaces/: __init__.py
tests/: conftest.py
tests/application/: test_assign_role.py  test_create_agent.py  test_feed_use_cases.py  test_ingest_feed.py  test_set_user_active.py  test_start_session.py
tests/domain/: test_agent.py  test_authenticated_user.py  test_feed.py  test_feed_ingestion.py  test_raw_feed_item.py  test_role.py  test_session.py  test_session_orchestrator.py  test_value_objects.py
tests/infrastructure/: test_feed_fetchers.py  test_feed_ingestion_scheduler.py  test_supabase_jwt_validator.py
tests/interfaces/: test_auth_dependency.py  test_feeds_router.py  test_require_role.py
(+85 files in other folders)
